syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";


option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

enum UserRole {
    USER_ROLE_ADMIN = 0;
    USER_ROLE_USER = 1;
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    UserRole role = 6;
    bool is_verified = 7;
}